k8s-manifests/02-routing-engine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ma-routing-engine
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ma-routing-engine
  template:
    metadata:
      labels:
        app: ma-routing-engine
    spec:
      containers:
      - name: ma-routing-engine
        image: messaging-agent-ma-routing-engine:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
