k8s-manifests/04-rcs-mautrix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ma-rcs-mautrix
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ma-rcs-mautrix
  template:
    metadata:
      labels:
        app: ma-rcs-mautrix
    spec:
      containers:
      - name: ma-rcs-mautrix
        image: messaging-agent-ma-rcs-mautrix:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 2777
