k8s-manifests/00-external-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
    - port: 5432
---
apiVersion: v1
kind: Endpoints
metadata:
  name: postgres
subsets:
  - addresses:
      - ip: 10.10.10.192
    ports:
      - port: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - port: 6379
---
apiVersion: v1
kind: Endpoints
metadata:
  name: redis
subsets:
  - addresses:
      - ip: 10.10.10.192
    ports:
      - port: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  ports:
    - port: 9092
---
apiVersion: v1
kind: Endpoints
metadata:
  name: kafka
subsets:
  - addresses:
      - ip: 10.10.10.192
    ports:
      - port: 9092
