k8s-manifests/01-core-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ma-core-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ma-core-service
  template:
    metadata:
      labels:
        app: ma-core-service
    spec:
      containers:
      - name: ma-core-service
        image: messaging-agent-core-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ma-core-service
spec:
  selector:
    app: ma-core-service
  ports:
    - port: 8080
      targetPort: 8080
