k8s-manifests/05-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ma-api-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ma-api-gateway
  template:
    metadata:
      labels:
        app: ma-api-gateway
    spec:
      containers:
      - name: ma-api-gateway
        image: messaging-agent-api-gateway:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ma-api-gateway
spec:
  selector:
    app: ma-api-gateway
  ports:
    - port: 3000
      targetPort: 3000
