k8s-manifests/07-admin-panel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ma-admin-panel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ma-admin-panel
  template:
    metadata:
      labels:
        app: ma-admin-panel
    spec:
      containers:
      - name: ma-admin-panel
        image: messaging-agent-admin-panel:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ma-admin-panel
spec:
  selector:
    app: ma-admin-panel
  ports:
    - port: 8081
      targetPort: 80
