k8s-manifests/11-postgres-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ma-postgres
  labels:
    app: ma-postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: ma-postgres
  template:
    metadata:
      labels:
        app: ma-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: ma-postgres
