k8s-manifests/12-redis-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ma-redis
  labels:
    app: ma-redis
spec:
  serviceName: "redis"
  replicas: 1
  selector:
    matchLabels:
      app: ma-redis
  template:
    metadata:
      labels:
        app: ma-redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
          name: redis
        command: ["redis-server", "--appendonly", "yes"]
        volumeMounts:
        - name: redis-data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: redis-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - port: 6379
  selector:
    app: ma-redis
