k8s-manifests/14-synapse-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ma-synapse
  labels:
    app: ma-synapse
spec:
  serviceName: "synapse"
  replicas: 1
  selector:
    matchLabels:
      app: ma-synapse
  template:
    metadata:
      labels:
        app: ma-synapse
    spec:
      containers:
      - name: synapse
        image: matrixdotorg/synapse:latest
        ports:
        - containerPort: 8008
          name: synapse
        volumeMounts:
        - name: synapse-data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: synapse-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 50Gi
---
apiVersion: v1
kind: Service
metadata:
  name: synapse
spec:
  ports:
    - port: 8008
  selector:
    app: ma-synapse
