k8s-manifests/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-panel-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: messaging-agent.globalnetservices.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ma-admin-panel
            port:
              number: 8081
  tls:
  - hosts:
    - messaging-agent.globalnetservices.net
    secretName: messaging-agent-tls-secret
